--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "express": "^4.14.0",
     "express-session": "^1.14.0",
     "flash": "^1.1.0",
+    "instagram-node": "^0.5.8",
     "mongoose": "^4.5.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.0.0"
+    "passport-local-mongoose": "^4.0.0",
+    "yelp": "^1.0.1"
   }
 }
