--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.14.0",
     "flash": "^1.1.0",
     "instagram-node": "^0.5.8",
+    "jquery": "^3.1.0",
     "mongoose": "^4.5.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
