--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.4.1",
     "connect-flash": "^0.1.1",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
