--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "flash": "^1.1.0",
     "instagram-node": "^0.5.8",
     "jquery": "^3.1.0",
+    "method-override": "^2.3.6",
     "mongoose": "^4.5.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
