--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bluebird": "^3.4.1",
     "connect-flash": "^0.1.1",
+    "ejs": "^2.5.2",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
     "flash": "^1.1.0",
