--- a/package.json
+++ b/package.json
@@ -34,8 +34,12 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "bootstrap": "^3.3.7",
+    "bootstrap-webpack": "0.0.5",
     "css-loader": "^0.23.1",
     "expect": "^1.14.0",
+    "expose-loader": "^0.7.1",
+    "file-loader": "^0.9.0",
     "foundation-sites": "^6.2.0",
     "jquery": "^2.2.1",
     "karma": "^0.13.22",
@@ -49,6 +53,7 @@
     "sass-loader": "^3.1.2",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.13"
   }
 }
