--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
     "node-sass": "^3.4.2",
+    "react-google-maps": "^4.11.0",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
     "sass-loader": "^3.1.2",
