--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
     "flash": "^1.1.0",
     "instagram-node": "^0.5.8",
     "jquery": "^3.1.0",
+    "jquery-ui": "^1.12.1",
+    "jquery-ui-bundle": "^1.11.4",
     "method-override": "^2.3.6",
     "mongoose": "^4.5.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
-    "yelp": "^1.0.1",
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^2.0.0"
+    "react-router": "^2.0.0",
+    "yelp": "^1.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
@@ -52,6 +54,7 @@
     "node-sass": "^3.4.2",
     "react-google-maps": "^4.11.0",
     "react-redux": "^4.4.5",
+    "react-sortable-hoc": "^0.2.0",
     "redux": "^3.6.0",
     "sass-loader": "^3.1.2",
     "script-loader": "^0.6.1",
