--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "expose-loader": "^0.7.1",
     "file-loader": "^0.9.0",
     "foundation-sites": "^6.2.0",
+    "image-webpack-loader": "^3.0.0",
     "jquery": "^2.2.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.2",
