--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "bootstrap": "^3.3.7",
     "bootstrap-webpack": "0.0.5",
     "css-loader": "^0.23.1",
+    "eslint": "^3.15.0",
+    "eslint-config-rallycoding": "^3.2.0",
+    "eslint-plugin-react": "^6.9.0",
     "expect": "^1.14.0",
     "expose-loader": "^0.7.1",
     "file-loader": "^0.9.0",
