--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+		"start:dev":"nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +16,6 @@
     "express": "^4.14.0",
     "express-session": "^1.14.0",
     "flash": "^1.1.0",
-    "instagram-node": "^0.5.8",
     "jquery": "^3.1.0",
     "jquery-ui": "^1.12.1",
     "jquery-ui-bundle": "^1.11.4",
@@ -56,6 +56,7 @@
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
     "node-sass": "^3.4.2",
+    "nodemon": "^1.11.0",
     "react-google-maps": "^4.11.0",
     "react-redux": "^4.4.5",
     "react-sortable-hoc": "^0.2.0",
@@ -64,6 +65,6 @@
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.13"
+    "webpack": "^1.14.0"
   }
 }
