added Sequelize configuration and modified eslint to be compatible with node

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,10 @@
         "commonjs": true,
         "es6": true
     },
-    "extends": "eslint:recommended",
+    "extends": [
+      "eslint:recommended"
+      ,"plugin:node/recommended"
+    ],
     "parserOptions": {
         "ecmaFeatures": {
             "experimentalObjectRestSpread": true,
@@ -13,7 +16,8 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "node"
     ],
     "rules": {
         "indent": [
@@ -26,11 +30,15 @@
         ],
         "quotes": [
             "error",
-            "double"
+            "single"
         ],
         "semi": [
             "error",
             "always"
-        ]
+        ],
+         "node/exports-style": [
+           "error",
+           "module.exports"
+         ]
     }
 }
