--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "journey",
   "version": "1.0.0",
+	"engines": {
+			"node": ">=4.0.0"
+	},
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-		"start:dev":"nodemon server.js"
+    "start:dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -24,10 +27,13 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
+    "pg": "^6.1.5",
+    "pg-hstore": "^2.3.2",
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.0",
+    "sequelize": "^3.30.2",
     "yelp": "^1.0.1"
   },
   "devDependencies": {
@@ -39,8 +45,9 @@
     "bootstrap": "^3.3.7",
     "bootstrap-webpack": "0.0.5",
     "css-loader": "^0.23.1",
-    "eslint": "^3.15.0",
+    "eslint": "^3.18.0",
     "eslint-config-rallycoding": "^3.2.0",
+    "eslint-plugin-node": "^4.2.1",
     "eslint-plugin-react": "^6.9.0",
     "expect": "^1.14.0",
     "expose-loader": "^0.7.1",
