--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,23 +1,24 @@
 {
   "development": {
-    "username": "root",
+    "username": "Phi",
     "password": null,
-    "database": "database_development",
+    "database": "journey",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+	 	"port": 5432,
+    "dialect": "postgres"
   },
   "test": {
     "username": "root",
     "password": null,
-    "database": "database_test",
+    "database": "journeydb",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   },
   "production": {
-    "username": "root",
+    "username": "Phi",
     "password": null,
-    "database": "database_production",
+    "database": "journeydb",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   }
 }
