--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "journey",
   "version": "1.0.0",
-	"engines": {
-			"node": ">=4.0.0"
-	},
+  "engines": {
+    "node": ">=4.0.0"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.17.1",
     "connect-flash": "^0.1.1",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
