--- a/server/config/config.json
+++ b/server/config/config.json
@@ -5,7 +5,8 @@
     "database": "phi",
     "host": "127.0.0.1",
      "port": 5436,
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "logging": false
   },
   "test": {
     "username": "root",
