--- a/package.json
+++ b/package.json
@@ -6,29 +6,34 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "start:dev":"nodemon server.js"
+    "start:dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "connect-flash": "^0.1.1",
-    "ejs": "^2.5.2",
-    "express": "^4.14.0",
-    "express-session": "^1.14.0",
-    "flash": "^1.1.0",
-    "jquery": "^3.1.0",
-    "jquery-ui": "^1.12.1",
-    "jquery-ui-bundle": "^1.11.4",
-    "method-override": "^2.3.6",
-    "mongoose": "^4.5.3",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.0.0",
-    "react": "^0.14.7",
-    "react-addons-test-utils": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-router": "^2.0.0",
-    "yelp": "^1.0.1"
+    "bcryptjs": "^2.4.3",
+ "body-parser": "^1.17.1",
+   "connect-flash": "^0.1.1",
+   "ejs": "^2.5.2",
+   "express": "^4.14.0",
+   "express-session": "^1.14.0",
+   "flash": "^1.1.0",
+   "jquery": "^3.1.0",
+   "jquery-ui": "^1.12.1",
+   "jquery-ui-bundle": "^1.11.4",
+   "method-override": "^2.3.6",
+   "mongoose": "^4.5.3",
+   "passport": "^0.3.2",
+   "passport-local": "^1.0.0",
+   "passport-local-mongoose": "^4.0.0",
+   "pg": "^6.1.5",
+   "pg-hstore": "^2.3.2",
+   "react": "^0.14.7",
+   "react-addons-test-utils": "^0.14.7",
+   "react-dom": "^0.14.7",
+   "react-router": "^2.0.0",
+   "sequelize": "^3.30.2",
+   "yelp": "^1.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
